Try_A100/ogbg-ppa/stdout/1672133783_9cf6aab6afc498d2ac858647865b658485f94285.out
Traceback (most recent call last):
  File "/home/mingqi/workspace/spectral_rotation/ogbg_a/graphml/ogbg/ppa/./main.py", line 19, in <module>
    from model import Net
  File "/home/mingqi/workspace/spectral_rotation/ogbg_a/graphml/ogbg/ppa/model.py", line 71
    nn.BatchNorm1d(hidden_size)
    ^
SyntaxError: invalid syntax
